[tool.poetry]
name = "photo-geo-tagging"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
exif = "^1.6.0"
geopy = "^2.4.1"
pandas = "^2.2.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
pillow = "^10.4.0"
pyarrow = "^17.0.0"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
